--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,8 @@ label {
 input[type="text"],
 input[type="email"],
 input[type="password"],
+input[type="number"],
+input[type="tel"],
 select {
     width: 80%; /* Ocupa toda a largura do formulário */
     padding: 8px;
